2000-03-20  Roland McGrath  <roland@baalperazim.frob.com>

	* Makefile.in (oskit-kern%.o): Pattern rule replaces oskit-kernel.o
	target rule.
	(kern%): Pattern rule replaces kernel target rule.
	(kernel-%.o): New pattern rule, like kernel.o rule.
	(init-%.c): New pattern rule.

1999-10-08  Thomas Bushnell, BSG  <tb@mit.edu>

	* linux/src/drivers/net/3c59x.c: Updated to version 0.99L of the
	driver from ftp://cesdis.gsfc.nasa.gov/linux/drivers/3c59x.c, in
	order to support the 3c509c card, as requested by Jeff Bailey
	<jbailey@nisa.net>.

1999-09-17  Thomas Bushnell, BSG  <tb@mit.edu>

	* linux/dev/drivers/block/ide.c (do_request) [MACH]: In "bad
	access" printf, actually print the number of sectors of the
	partition.

1999-10-05  Roland McGrath  <roland@baalperazim.frob.com>

	* i386/intel/pmap.c (pmap_bootstrap): Use _start instead of start.
	* i386/i386/trap.c (kernel_trap): Likewise.

1999-10-04  Roland McGrath  <roland@baalperazim.frob.com>

	* configure.in: Remove AC_CHECK_TOOL(MAKE,...) check.
	* Makefile.in (MAKE): Variable removed.  We require GNU make anyway,
	and it always sets MAKE.
	* configure: Regenerated.

	* Makefile.in (clib-routines.o, check-clib-routines, clib-routines.d):
	Remove these rules, replace with:
	(kernel.o): New target, relocatable object linked from kernel objects.
	(kernel-undef, kernel-undef-bad): New targets, glean undefined symbols
	from kernel.o.
	(clib-routines.o): New target, use those to select symbols from libc.
	(clib-routines): Add some symbols; move defn to kernel linking page.
	This variable is now a list of symbols allowed to be undefined,
	rather than a prescriptive list of symbols always grabbed from libc.
	(kernel): Rewrite this rules to just link kernel.o and clib-routines.o
	together to make the kernel image.

1999-09-15  Mark Kettenis  <kettenis@gnu.org>

	* i386/i386/user_ldt.c: Fix user LDT management.
	(i386_set_ldt): Prevent thrashing the LDT for the current thread.